--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,8 @@
   <%= auto_discovery_link_tag(:atom, posts_path(:atom)) %>
 </head>
 <body>
-
+<div id="main">
 <%= yield %>
-
+</div>
 </body>
 </html>
