added zurb icons

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -8,8 +8,8 @@ div#main {
 
 footer {
   margin-top: 50px;
-  background-color: #000;
-  color: #eee;
+  background-color: #34495e;
+  color: #ecf0f1;
   text-align: center;
   p {
   line-height: 100px;
