--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -968,7 +968,7 @@
 //
 
 // Background color for the top bar
-// $topbar-bg: #111;
+$topbar-bg: #2c3e50;
 
 // Height and margin
 // $topbar-height: 45px;
@@ -982,7 +982,7 @@
 // $topbar-title-font-size: emCalc(17px);
 
 // Set the link colors and styles for top-level nav
-// $topbar-link-color: #fff;
+// $topbar-link-color: #ecf0f1;
 // $topbar-link-weight: bold;
 // $topbar-link-font-size: emCalc(13px);
 
@@ -1010,4 +1010,5 @@
 
 
 @import 'foundation';
+@import 'foundation-icons';
 @import 'common';
