--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
 
       <li class="divider hide-for-small"></li>
       <li>
-        <%= link_to raw('<i class="fi-[twitter]"></i>'), 'https://twitter.com/' %>
+        <%= link_to raw('<i class="foundicon-twitter"></i>'), 'https://twitter.com/' %>
       </li>
 
       <li class="divider hide-for-small"></li>
